--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -5,7 +5,7 @@
       style="height: 100vh"
     >
       <div>
-        <h1>Registro</h1>
+        <h1>Login</h1>
 
         <form [formGroup]="iniciarSession" (ngSubmit)="sendData()">
           <div *ngIf="loginError">
