--- a/src/app/Components/create-employeds/create-employeds.component.html
+++ b/src/app/Components/create-employeds/create-employeds.component.html
@@ -1,91 +1,87 @@
-<div class="container pt-4">
-  <div class="row">
-    <div class="col-lg-6 offset-lg-3">
-      <div class="card text-center">
-        <div class="card-body"></div>
-        <h5>Crear nuevo usuario</h5>
-        <span class="bange-danger">TODOS LOS CAMPOS SON OBLIGATORIOS</span>
-        <form [formGroup]="crearUsuario" (ngSubmit)="enviarFormulario()">
-          <table>
-            <thead>
-              <tr>
-                <th>
-                  <input
-                    formControlName="identifiacion"
-                    type="text"
-                    class="form-control"
-                    placeholder="Identificacion"
-                  />
-                </th>
-                <th>
-                  <input
-                    formControlName="name"
-                    type="text"
-                    class="form-control"
-                    placeholder="Name"
-                  />
-                </th>
-                <th>
-                  <input
-                    formControlName="apellido"
-                    type="lastname"
-                    class="form-control"
-                    placeholder="Apellido"
-                  />
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <td>
-                <input
-                  formControlName="telefono"
-                  type="phone"
-                  class="form-control"
-                  placeholder="Phone"
-                />
-              </td>
-              <td>
-                <input
-                  formControlName="email"
-                  type="email"
-                  class="form-control"
-                  placeholder="E-mail"
-                />
-              </td>
-              <td>
-                <input
-                  formControlName="password"
-                  type="Rol"
-                  class="form-control"
-                  placeholder="Password"
-                />
-              </td>
-            </tbody>
-            <select formControlName="rol">
-              <option value="Administrador">Administrador</option>
-              <option value="Desarrollador">Desarrollador</option>
-              <option value="Comercial">Comercial</option>
-              <option value="Call center">Call center</option>
-            </select>
-          </table>
-          <div class="mt-3">
-            <button
-              type="submit"
-              class="btn btn-primary btn-sm m-4"
-              (click)="enviarFormulario()"
-            >
-              Guardar
-            </button>
-            <button
-              type="text"
-              class="btn btn-primary btn-sm"
-              routerLink="/dashboard"
-            >
-              Volver
-            </button>
-          </div>
-        </form>
-      </div>
+<div class="container">
+  <h2 class="text-center m-5">Agregar Usuario</h2>
+  <form class="row d-flex justify-content-center">
+    <div class="col-5 mt-4">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="ID"
+        formControlName="identificacion"
+      />
     </div>
-  </div>
+    <!--primera columna-->
+
+    <div class="col-5 mt-4 my-3">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Nombre"
+        formControlName="name"
+      />
+    </div>
+    <!--Segunda-->
+    <div class="col-5 mt-4 my-3">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Apellido"
+        formControlName="apellido"
+      />
+    </div>
+    <!--tercera-->
+
+    <div class="col-5 mt-4">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Email"
+        formControlName="email"
+      />
+    </div>
+    <!--cuarta-->
+
+    <div class="col-5 mt-4">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Password"
+        formControlName="Password"
+      />
+    </div>
+    <!--quinta-->
+
+    <div class="col-5 mt-4">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Telefono"
+        formControlName="telefono"
+      />
+    </div>
+    <!--sexta-->
+    <div class="col-3 text-center mt-4">
+      <select formControlName="rol">
+        <option value="Administrador">Administrador</option>
+        <option value="Desarrollador">Desarrollador</option>
+        <option value="Comercial">Comercial</option>
+        <option value="Call center">Call center</option>
+      </select>
+    </div>
+    <div class="mt-3 text-center">
+      <button
+        type="submit"
+        class="btn btn-primary btn-sm m-4"
+        (click)="enviarFormulario()"
+      >
+        Guardar
+      </button>
+      <button
+        type="text"
+        class="btn btn-primary btn-sm"
+        routerLink="/dashboard"
+      >
+        Volver
+      </button>
+    </div>
+  </form>
 </div>
