--- a/src/app/Components/create-employeds/create-employeds.component.html
+++ b/src/app/Components/create-employeds/create-employeds.component.html
@@ -1,6 +1,15 @@
 <div class="container">
   <h2 class="text-center m-5">Agregar Usuario</h2>
-  <form class="row d-flex justify-content-center">
+  <span
+    *ngIf="crearUsuario.invalid"
+    class="text-danger d-flex justify-content-center"
+    >TODOS LOS CAMPOS SON REQUERIDOS</span
+  >
+  <form
+    class="row d-flex justify-content-center"
+    [formGroup]="crearUsuario"
+    (ngSubmit)="crearEmpleado()"
+  >
     <div class="col-5 mt-4">
       <input
         type="text"
@@ -37,6 +46,22 @@
         placeholder="Email"
         formControlName="email"
       />
+      <span
+        *ngIf="
+          crearUsuario.get('email')?.hasError('required') &&
+          crearUsuario.get('email')?.touched
+        "
+        class="text-danger errorlabel"
+        >El correo electronico es requerido</span
+      >
+      <span
+        *ngIf="
+          crearUsuario.get('email')?.hasError('email') &&
+          crearUsuario.get('email')?.touched
+        "
+        class="text-danger errorlabel"
+        >El correo electronico es inavlido</span
+      >
     </div>
     <!--cuarta-->
 
@@ -45,7 +70,7 @@
         type="text"
         class="form-control"
         placeholder="Password"
-        formControlName="Password"
+        formControlName="password"
       />
     </div>
     <!--quinta-->
@@ -69,9 +94,10 @@
     </div>
     <div class="mt-3 text-center">
       <button
+        [disabled]="crearUsuario.invalid"
         type="submit"
         class="btn btn-primary btn-sm m-4"
-        (click)="enviarFormulario()"
+        (click)="crearEmpleado()"
       >
         Guardar
       </button>
